Second Commit Added new changes for HCP

--- a/Title_Priority/src/main/resources/application.properties
+++ b/Title_Priority/src/main/resources/application.properties
@@ -3,21 +3,21 @@ server.port=8082
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
 
-spring.tcrhub.datasource.jdbcUrl=jdbc:sqlserver://10.212.134.223:1433;databaseName=tcr_hub
-spring.tcrhub.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.tcrhub.datasource.username=tcr_hub
-spring.tcrhub.datasource.password=tcr_hub
-spring.jpa.hibernate.ddl-auto=none
+#spring.tcrhub.datasource.jdbcUrl=jdbc:sqlserver://10.212.134.223:1433;databaseName=tcr_hub
+#spring.tcrhub.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.tcrhub.datasource.username=tcr_hub
+#spring.tcrhub.datasource.password=tcr_hub
+#spring.jpa.hibernate.ddl-auto=none
 spring.mvc.converters.preferred-json-mapper=gson
 
 
 spring.jpa.show-sql = true
 
 #Appointments Datasource
-spring.avos.datasource.jdbcUrl=jdbc:sqlserver://10.212.134.223:1433;databaseName=avos
-spring.avos.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.avos.datasource.username=avos
-spring.avos.datasource.password=avos
+#spring.avos.datasource.jdbcUrl=jdbc:sqlserver://10.212.134.223:1433;databaseName=avos
+#spring.avos.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.avos.datasource.username=avos
+#spring.avos.datasource.password=avos
 
 
 
@@ -42,7 +42,13 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 
 #Prod Details
-#spring.datasource.url=jdbc:sqlserver://10.213.50.36:1433;databaseName=tcr_hub
-#spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.username=tcr_hub
-#spring.datasource.password=tcr_hub
+spring.tcrhub.datasource.jdbcUrl=jdbc:sqlserver://10.213.50.36:1433;databaseName=tcr_hub
+spring.tcrhub.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.tcrhub.datasource.username=tcr_hub
+spring.tcrhub.datasource.password=tcr_hub
+
+
+spring.avos.datasource.jdbcUrl=jdbc:sqlserver://10.213.50.36:1433;databaseName=avos
+spring.avos.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.avos.datasource.username=avos
+spring.avos.datasource.password=avos
